Account for 1 twip width of BR when computing the size of textareas.  b=228752  Patch by Mats Palmgren <mats.palmgren@bredband.net>.  r+sr=dbaron  a=brendan